initial value added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,6 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  better_linter:
-    git:
-      url: git@github.com:mdikcinar/better_linter.git
-      ref: master
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^4.0.0+1
